--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,57 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body,
+html {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body::-webkit-scrollbar {
+  width: 0;
+}
+
+
+input:focus,
+textarea:focus,
+button:focus {
+  outline: 0 !important;
+  box-shadow: none !important;
+}
+
+.z-index {
+  z-index: 1000;
+}
+
+.linear-background {
+  background: linear-gradient(269.82deg, #07091c00 0.17%, #080a1ad6 99.87%);
+}
+
+@layer base {
+  .flex-column {
+    @apply flex flex-col justify-center items-center;
+  }
+
+  .flex-rows {
+    @apply flex flex-row justify-center items-center;
+  }
+
+  .flex-btn {
+    @apply flex justify-between items-center;
+  }
+
+  .transitions {
+    @apply transition duration-300 ease-in;
+  }
+
+  .hovers {
+    @apply hidden;
+  }
+
+  .hovered:hover .hovers {
+    @apply flex-col
+  }
+
 }
