--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,7 @@ body,
 html {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
+  scroll-behavior: smooth;
 }
 
 body::-webkit-scrollbar {
