--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,6 +30,13 @@ button:focus {
   background: linear-gradient(269.82deg, #07091c00 0.17%, #080a1ad6 99.87%);
 }
 
+.making-shadow {
+  box-shadow: 0px 7px 19px -5px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 7px 19px -5px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 7px 19px -5px rgba(0, 0, 0, 0.75);
+}
+
+
 @layer base {
   .flex-column {
     @apply flex flex-col justify-center items-center;
