--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,10 +10,26 @@ html {
   scroll-behavior: smooth;
 }
 
-body::-webkit-scrollbar {
-  width: 0;
+::-webkit-scrollbar {
+  width: 7px;
+  height: 10px;
+  background-color: transparent;
 }
 
+::-webkit-scrollbar-thumb {
+  background-color: #E0D5D8;
+  border: 2px solid transparent;
+  border-radius: 12px;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar * {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb:vertical {
+  height: 5px;
+}
 
 input:focus,
 textarea:focus,
@@ -36,6 +52,27 @@ button:focus {
   -moz-box-shadow: 0px 7px 19px -5px rgba(0, 0, 0, 0.75);
 }
 
+.text-2xs {
+  font-size: 10px;
+  line-height: 14px;
+}
+
+.z-1000 {
+  z-index: 1000;
+}
+
+.wrapper {
+  position: relative;
+  padding-top: 56.25%;
+}
+
+.player {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 @layer base {
   .flex-column {
